probably fix overflow

--- a/bodydough-app/src/app/globals.css
+++ b/bodydough-app/src/app/globals.css
@@ -27,5 +27,7 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
+    scrollbar-track-color: transparent;
+    scrollbar-color: transparent;
 }
